reporting: include code explaining sheets